Fix incorrect margin row spacing value

--- a/src/sass/objects/_objects.grid.spacing.scss
+++ b/src/sass/objects/_objects.grid.spacing.scss
@@ -3,7 +3,7 @@
 // =============================================================================
 
 .grid--row-spacing {
-    margin-bottom: $base-spacing-unit;
+    margin-bottom: -$base-spacing-unit;
 
     > * {
         margin-bottom: $base-spacing-unit;
